--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="16">
         <tr>
             <td>
-                <img src="img/Luntik.jpeg" width="200" alt="тут Лунтик">
+                <img src="Luntik.jpeg" width="200" alt="тут Лунтик">
             </td>
             <td>
                 <h1>«Лунтик и его друзья» </h1>
